完善子页面顶部按钮显示逻辑 修改markdown数据表增加文档类型 增加文档查看检索模块 增加文档备份恢复功能模块

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -81,6 +81,19 @@
     color:orangered;
     
 }
+.icon-search-clear {
+    font-size: 28px;
+    position: absolute;
+    right:3px;
+    top: 5px;
+    z-index: 999;
+    color: red;
+}
+.icon-search-clear:hover{
+    color: orange;
+}
+
+
 /*markdown文档格式css*/
 .markdown {
     font-family: "Avenir Next", Helvetica, Arial, sans-serif;
