增加主页面开放文档查看模块

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -92,7 +92,9 @@
 .icon-search-clear:hover{
     color: orange;
 }
-
+.mainmenuname {
+    font-weight: bold;
+}
 
 /*markdown文档格式css*/
 .markdown {
